fix body tag overflow to scroll

--- a/assets/styles/layout/default.pcss
+++ b/assets/styles/layout/default.pcss
@@ -30,11 +30,118 @@ a {
   }
 }
 
-
 /* layout */
 main {
   position: relative;
   width: 100%;
+}
+
+.menu-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 100vh;
+  z-index: 10;
+
+  @media (max-width: 55em) {
+    flex-direction: column;
+    height: auto;
+    min-height: 0;
+    padding-bottom: 10em;
+  }
+}
+
+.menu {
+  position: relative;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 0 25vw;
+  font-size: 4vw;
+  align-items: flex-start;
+
+  @media (max-width: 55em) {
+    font-size: 2.75em;
+    margin: 0 auto;
+    align-items: center;
+  }
+}
+
+.menu__item {
+  color: var(--color-menu);
+  line-height: 1.25;
+  text-transform: lowercase;
+  letter-spacing: -0.025em;
+  text-indent: -0.025em;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  position: relative;
+  pointer-events: none;
+}
+
+.menu__item:hover,
+.menu__item:focus {
+  color: var(--color-menu-hover);
+}
+
+.menu__item::before {
+  content: '';
+  width: 60%;
+  height: 25px;
+  background: linear-gradient(45deg, #f19872, #e86c9a);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform-origin: 0 0;
+  transform: scale3d(0, 1, 1);
+}
+
+.menu__item:nth-child(2)::before {
+  background: linear-gradient(45deg, #0947db, #07d89d);
+}
+
+.menu__item:nth-child(3)::before {
+  background: linear-gradient(45deg, #ee2d29, #f8ae2c);
+}
+
+.menu__item:nth-child(4)::before {
+  background: linear-gradient(45deg, #3a3d98, #6f22b9);
+}
+
+.menu__item:nth-child(5)::before {
+  background: linear-gradient(45deg, #9d316e, #de2d3e);
+}
+
+.menu__item:nth-child(6)::before {
+  background: linear-gradient(45deg, #00ac53, #23c3e0);
+}
+
+.menu__item.menu__item--showDeco {
+  pointer-events: auto;
+
+  &::before {
+    transition: transform 0.8s cubic-bezier(0.2, 1, 0.3, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  &:hover::before {
+    transition: transform 0.8s cubic-bezier(0.2, 1, 0.3, 1);
+    transform: scale3d(1.2, 1, 1);
+  }
+}
+
+.menu__item::v-deep span {
+  display: block;
+  position: relative;
 }
 
 .content--reveal {
