--- a/assets/styles/main.pcss
+++ b/assets/styles/main.pcss
@@ -21,6 +21,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   color: #ededed;
   background-color: #000;
+  overflow-y: scroll;
 }
 
 p, ul {
